<resources>
    <string name="app_name">钱包行云</string>

    <string name="hello_world">Hello world!</string>、
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_start_address">StartAddressActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_profile">user</string>

    <string name="xlistview_header_hint_loading">加载中</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_footer_hint_ready">释放加载更多</string>
    <string name="xlistview_footer_hint_no_more">没有更多了</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_complete_lable">加载完成</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-->侧边栏<-->
    <string name="menu_memberinfo">会员信息</string>
    <string name="menu_recharge">立即充值</string>
    <string name="menu_credit_management">信用管理</string>
    <string name="menu_my_order">我的订单</string>
    <string name="menu_invoice_management">发票管理</string>
    <string name="menu_team_management">团队管理</string>
    <string name="menu_redeem">积分兑换</string>
    <string name="menu_coupon">优惠券</string>
    <string name="menu_message">消息中心</string>
    <string name="menu_advice">建议反馈</string>
    <string name="menu_more">更多</string>

    <!--一键登录-->
    <string name="hint_login_edt_cellphone">请输入手机号</string>
    <string name="hint_login_edt_sms">请输入验证码</string>
    <string name="btn_send_sms">获取验证码</string>
    <string name="sms_context_not_null">验证码不能为空</string>
    <string name="context_is_not_null">手机号码不能为空</string>
    <string name="btn_login">一键登入</string>
    <string name="notify_sms">请输入正确的手机号码</string>
    <string name="notify_sms_sucess">短信验证码已经发送到您的手机，请注意查收</string>
    <string name="notify_sms_err">获取验证码失败，请检查您的网络</string>

    <!--注册-->
    <string name="register_warn">您还未加入任何一家企业，填完信息来建立您的企业吧～</string>
    <string name="register_cellphone">手机号</string>
    <string name="register_name">联系人姓名</string>
    <string name="register_company_name">企业名称</string>
    <string name="register_email">企业邮箱</string>
    <string name="regsiter_city">所在城市</string>
    <string name="register_invitation_code">邀请码</string>
    <string name="register_email_report">※企业邮箱将会成为您登录PC端管理系统的登录名，密码将会以短信的形式发送到您的手机上！</string>
    <string name="register_read">我已阅读并同意</string>
    <string name="register_agreement">《钱包行云服务协议》</string>
    <string name="register_tv_register">注册</string>
    <string name="username">司机</string>

    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="about_qianbao">钱包行云（qianbaoplus.com），是钱包生活旗下专业的中国企业级消费管理平台。目前，它主要为企业员工提供出行叫车一站式消费服务，解决公务出行、加班打车、报销对账等企业流程中的痛点问题。钱包行云服务平台由移动端（iPhone、Android、H5）和 PC 端两部分组成。移动端主要为企业员 工提供用车呼叫、行程管理等功能，管理员用户可通过移动端完成充值、叫车用车情况查询与分析等操作。PC 端（网页版）主要为企业提供出行用车的管理功能，包括员工维护、用车规则设定、用车情况查询与分析、预付充值、财务对账及发票申请等。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="no_new_version">已经是最新版本</string>
    <string name="upgrade_now">立即更新</string>
    <string name="msg_app_upgrade_title">软件更新</string>
    <string name="upgrade_later">以后再说</string>
</resources>
